--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,25 @@
 nav {
   padding: 10px;
-  background: lightgray;
+  margin: 10px;
+  border: 1px;
+  border-radius: 5px;
+  background: rgb(238, 100, 12);
 }
 
 nav span {
-  font-size: 24px;
-  color: green;
+  font-size: 35px;
+  color: rgb(213, 238, 130);
+  font-weight: bold;
+  margin: 0 40px;
 }
 
 nav a {
-  color: black;
+  font-size: 20px;
+  color: white;
   text-decoration: none;
   margin: 0 10px;
+}
+
+main {
+  padding: 0 30px;
 }
