--- a/src/Stock.css
+++ b/src/Stock.css
@@ -1,5 +1,9 @@
 .Stock {
     margin-top: 1em;
     margin-left: 1em;
-    font-size: 1.5em;
+    font-size: 1.2em;
+}
+.symbol{
+    font-size: 1.4em;
+    color: #9C0;
 }
